Preventing scrolling offscreen

--- a/wp-content/themes/engage/assets/scss/base/_base.scss
+++ b/wp-content/themes/engage/assets/scss/base/_base.scss
@@ -1,4 +1,5 @@
 body {
   background: #fff;
   max-width: 100vw;
+  overflow-x: hidden;
 }
